<?xml version="1.0"?>
<package format="2">
  <name>vtc_teleop</name>
  <version>0.0.0</version>
  <description>The vtc_teleop package</description>
  <maintainer email="souya@todo.todo">souya</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>geometry_msgs</depend>
  <export></export>

</package>
